k8s/service.yaml
# LOCUS: service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
---
apiVersion: v1
kind: Service
metadata:
  name: visual-engine
spec:
  type: NodePort
  selector:
    app: visual-engine
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30801
---
apiVersion: v1
kind: Service
metadata:
  name: attribute-tagger
spec:
  type: NodePort
  selector:
    app: attribute-tagger
  ports:
    - port: 8004
      targetPort: 8004
      nodePort: 30804
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-exporter
spec:
  type: NodePort
  selector:
    app: mlops-exporter
  ports:
    - port: 8003
      targetPort: 8003
      nodePort: 30803
